# MxLang

./: .clang-tidy  CMakeLists.txt  README.md  Test.mx
Include/: Diagnostics.h  Errors.h  Functions.h  Interpreter.h  Matrix.h  Mx.h  MxShape.h  Parser.h  Result.h  SourceManager.h  Tokenizer.h  TypeChecker.h  Types.h
Include/Memory/: Arena.h  DynArena.h  StatArena.h  SymbolTable.h
Source/: Diagnostics.c  Errors.c  Functions.c  Interpreter.c  Main.c  Main.old  Mx.c  Parser.c  SourceManager.c  Tokenizer.c  TypeChecker.c
Source/Memory/: Arena.c  DynArena.c  StatArena.c  SymbolTable.c
